--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.sirenix.odin-inspector",
-  "displayName": "Odin Inspector",
+  "name": "com.asset-store.sirenix.odin-inspector",
+  "displayName": "Asset-Store.Odin-Inspector",
   "version": "3.0.9"
 }
